--- a/src/style.scss
+++ b/src/style.scss
@@ -12,7 +12,7 @@ $table-variants: (
 
 .action-container {
   .action-card {
-    justify-content: space-around;
+    //justify-content: space-around;
     position: relative;
   }
 }
