AF-62-MemberAccountDetails: Update form and inputs to render default values in a form

--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,10 @@ $table-variants: (
         "dark": $dark,
 );
 
+$input-disabled-bg: #d8d8d8;
+
+$form-select-disabled-color:null;
+$form-select-disabled-bg: #d8d8d8;
 $input-bg: white;
 
 
